# lab11-Dinh_Nhat_Thanh-2A202600572

./: IMPROVEMENT.md  MISSION.md  NOTES.md  RESOURCES.md  assignment11_defense_pipeline.md  individual_report.md  lab11_reflection_report.md  pyproject.toml  requirements.txt  results.json
lessons/: 0001-layering-guardrails-with-hitl.html  0002-mapping-red-team-stories-to-rails.html  0003-hitl-thresholds-and-escalation.html  0003-hitl-thresholds-for-banking-workflows.html  0004-adk-first-defense-pipeline.html
notebooks/: Copy_of_attack_defense_arena.ipynb  arena_test.ipynb  attack_defense_arena.ipynb  lab11_guardrails_hitl.ipynb
reference/: 0001-guardrail-decision-matrix.html  0002-red-team-to-rail-checklist.html  0003-hitl-threshold-canvas.html  0003-hitl-threshold-matrix.html  0004-pipeline-assembly-checklist.html
src/: main.py
src/agents/: agent.py
src/attacks/: attacks.py
src/core/: config.py
src/guardrails/: input_guardrails.py  nemo_guardrails.py  output_guardrails.py
src/hitl/: hitl.py
src/testing/: testing.py
tests/: test_agents.py  test_attacks.py  test_hitl.py  test_input_guardrails.py  test_main.py  test_output_guardrails.py  test_testing_pipeline.py
