[project]
name = "day-11-guardrails-hitl-responsible-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions]>=0.3.0",
    "google-genai>=1.0.0",
    "ipykernel>=7.3.0",
    "langchain-google-genai>=4.2.5",
    "nemoguardrails>=0.22.0",
]
